refactored code, aws deployment, and dockerized

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
+new_secrets.json
+new_secrets_file.json
+prod_secrets.json
+backup_secrets.json
+secrets.json
+./ssl/*
+./config/*.json
+./config/ssl/*.key
+./config/ssl/*.pem
+./config/ssl/*.crt
+./config/ssl/*.crl
+ssl
+hp_config.json
+collector_config.json
+boto_controller_config.json
 boto_config.json
 ssh_keys/
 dhp_env/
+dhp_venv/
 internal_notes/
 ssl/
 internal-scripts/
