properly handle ami resolution with keywords, etc.

--- a/samples/boto_config_sample.json
+++ b/samples/boto_config_sample.json
@@ -8,6 +8,13 @@
     "instance_type": "t2.micro",
     "instance_descriptions": [
         {"name": "dockerhp",
+         "image_architecture": "x86_64",
+         "image_platform_details": "Linux/UNIX",
+         "image_public": true, 
+         "image_name": "",
+         "image_type": "machine",
+         "image_description_keywords": ["canonical, ubuntu, 20.04 lts, amd64 focal image"],
+         "image_owner_id": "099720109477",
          "instance_type": "t2.micro",
          "security_groups": ["remote-ssh-access", "dockerhp-docker-access"],
          "base_keyname": "dockerhp-host",
@@ -38,7 +45,13 @@
          }
         },
         {"name": "dockerhp-collector",
-         "instance_type": "t2.micro",
+         "image_architecture": "x86_64",
+         "image_platform_details": "Linux/UNIX",
+         "image_public": true, 
+         "image_name": "",
+         "image_type": "machine",
+         "image_description_keywords": ["canonical, ubuntu, 20.04 lts, amd64 focal image"],
+         "image_owner_id": "099720109477",
          "security_groups": ["remote-ssh-access", "dockerhp-collector-access"],
          "base_keyname": "dockerhp-collector",
          "keyname_fmt": "{region}-{base_keyname}.pem",
@@ -78,6 +91,13 @@
         },
         {"name": "dockerhp-mongodb",
          "instance_type": "t2.micro",
+         "image_architecture": "x86_64",
+         "image_platform_details": "Linux/UNIX",
+         "image_public": true, 
+         "image_name": "",
+         "image_type": "machine",
+         "image_description_keywords": ["canonical, ubuntu, 20.04 lts, amd64 focal image"],
+         "image_owner_id": "099720109477",
          "security_groups": ["remote-ssh-access", "dockerhp-mongodb-access"],
          "base_keyname": "dockerhp-collector",
          "keyname_fmt": "{region}-{base_keyname}.pem",
@@ -208,23 +228,6 @@
          ]
         }
     ],
-    "region_to_ami": {
-        "us-east-1":"ami-0bcc094591f354be2",
-        "us-east-2":"ami-0bbe28eb2173f6167",
-        "us-west-1":"ami-0dd005d3eb03f66e8",
-        "us-west-2":"ami-0a634ae95e11c6f91",
-        "sa-east-1":"ami-08caf314e5abfbef4",
-        "ap-south-1":"ami-02b5fbc2cb28b77b8",
-        "ap-southeast-1":"ami-0007cf37783ff7e10",
-        "ap-southeast-2":"ami-0f87b0a4eff45d9ce",
-        "ap-northeast-1":"ami-01c36f3329957b16a",
-        "ap-northeast-2":"ami-05438a9ce08100b25",
-        "eu-north-1": "ami-0363142d8c97b94c8",
-        "eu-central-1": "ami-04932daa2567651e7",
-        "eu-west-1": "ami-07ee42ba0209b6d77",
-        "eu-west-2": "ami-04edc9c2bfcf9a772",
-        "eu-west-3": "ami-03d4fca0a9ced3d1f"
-    },
     "actions":{
         "setup_mongodb": {"type": "commands", 
             "commands": [
